import { Person } from "./Person";
import { string,MediaObject } from "./string,MediaObject";
import { ImageObject } from "./ImageObject";
import { Person,MusicGroup } from "./Person,MusicGroup";


export class VideoObject extends MediaObject {
  embeddedTextCaption: string;
  director: Person;
  actor: Person;
  caption: string,MediaObject;
  thumbnail: ImageObject;
  transcript: string;
  videoQuality: string;
  videoFrameSize: string;
  actors: Person;
  musicBy: Person,MusicGroup;
  directors: Person;


}
