classDiagram
  CreativeWorkSeason -- dateTime
  CreativeWorkSeason -- date
  CreativeWorkSeason -- Person
  CreativeWorkSeason -- VideoObject
  CreativeWorkSeason -- Episode
  CreativeWorkSeason -- CreativeWorkSeries
  CreativeWorkSeason -- Organization


class CreativeWorkSeason {

  dateTime startDate
  date startDate
  Person director
  Person actor
  VideoObject trailer
  date endDate
  dateTime endDate
  Episode episodes
  number numberOfEpisodes
  CreativeWorkSeries partOfSeries
  Organization productionCompany
  string seasonNumber
  number seasonNumber
  Episode episode

 }
